--- a/proj1/makefile
+++ b/proj1/makefile
@@ -1,7 +1,7 @@
 # compiler
 CC=g++
 # compiler flags
-CFLAGS=-c -Wall -std=c++17 -fopenmp
+CFLAGS=-Wall -std=c++17 -fopenmp
 # linker flags
 LDFLAGS=
 # source files
@@ -13,11 +13,9 @@ EXECUTABLE=tsp
 
 all: $(SOURCES) $(EXECUTABLE)
 
-$(EXECUTABLE): $(OBJECTS)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJECTS) -o $@
+$(EXECUTABLE): $(SOURCES)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(SOURCES) -o $@
 
-.cpp.o:
-	$(CC) $(CFLAGS) $< -o $@
 
 clean:
 	rm -rf *o $(EXECUTABLE)
